# music-visualization

./: .gitignore
audio_processing_teensy/: audio_processing_teensy.ino  compile_upload
led-wall/: setup.cfg
led-wall/examples/: .led_wall_server.py.swp  color_cycle.py  led_wall_server.py  text.py
led-wall/examples/new_server/: new_server.py
led-wall/led_wall_driver_software/: __init__.py
old/: compile_upload.sh
old/FFT/: FFT.ino
old/FFT2/: FFT2.ino
old/FFT3/: FFT3.ino
old/PassThroughStereo/: PassThroughStereo.ino
old/bandpass_rms/: bandpass_rms.ino
old/mono_serial_display/: audio_processing_teensy.ino  compile_upload
pongwall_server/pongwall_server/: send_sheet.py
pongwall_server/pongwall_server/audio_visualization/: fft_vis2.py  record.py
spectral_analyzer/: README.md  config.toml.example  pyproject.toml
spectral_analyzer/spectral_analyzer/: __init__.py  __main__.py  emulated_led_wall.py  frame_generation.py  numpy_sprite.py  remote_led_wall.py  teensy_reciever.py
spectral_analyzer/spectral_analyzer/frame_generation/: display_styles.py  frame_generation.py  gradient.py  utils.py
spectral_analyzer/spectral_analyzer/shaders/: frag.glsl  geo.glsl  vert.glsl
utilities/: display.py  generate_teensy_fft_bin_indexes.py
